# isolator

./: .gitignore  README.md
Rocket/: Cargo.toml
Rocket/examples/hello/: Cargo.toml
Rocket/examples/hello/src/: main.rs
builder/: Cargo.toml  LICENSE_MIT
builder/src/: lib.rs
doc/: O planu i kako ga napraviti.txt  algorithm for finding which tiles can be set.txt  biblioteka modela.txt  buduce mogucnosti aplikacije.txt  doc2.txt  generisanje plana.txt  important for phase 2 - need to redesign alot.txt  intro doc 1.txt  jos neke stvari o animaciji.txt  list of tools to check if can help.txt  malo o rustu i buducnosti.txt  napomene nakon zavrsenog renderovanja zgrade.txt  neke stvari o rustu.txt  next_steps.txt  o poplocavanju.txt  phase_2_temp_doc.txt  primer1.txt  problematic data for merger.txt  prvi performance problemi su se videli.txt  serijaliz deserijaliz izmedju rusta i js-a.txt  stvari za doradjivanje na pronalasku poplocavanja.txt  things to fix in future.txt  todo sometimes.txt
drawing/: package-lock.json  package.json  tsconfig.json  webpack.config.js
drawing/public/: abc.json  index.html  slider.js
drawing/src/: app.ts  backendService.ts  buildingWithVisibility.ts  index.js  models.ts  showBuilding.ts  showPlanExecution.ts  util.ts
drawing/src/plan_execution/: showPlanExecution.ts
drawing/src/util/: util.ts
general_geometry/: Cargo.toml
general_geometry/src/: angle.rs  coordinate_system3d.rs  line3d.rs  line_segment.rs  plane.rs  point.rs  polygon.rs  polygon2d.rs  polygon_points_on_sides.rs  positive_f64.rs  triangle.rs
generating_plan/: Cargo.toml
generating_plan/src/: lib.rs  main.rs  main2.rs  plan_execution.rs  plan_generation.rs  request_for_isolation.rs  tile.rs
generating_plan/src/building_representations/: converters.rs  levels.rs  mod.rs  polygon_walls.rs  request_for_isolation.rs  triangulized_walls.rs
generating_plan/src/general_geometry/: angle.rs  coordinate_system3d.rs  line3d.rs  line_segment.rs  mod.rs  plane.rs  point.rs  point2d.rs  polygon.rs  polygon2d.rs  polygon_points_on_sides.rs  simmilar.rs  triangle.rs
generating_plan/src/tiling/: corner_handling.rs  mod.rs  tile.rs  tile_with_adhesive.rs
generating_plan/src/triangulation/: building_with_polygon_walls.rs  building_with_triangulized_walls.rs  mod.rs  polygon_for_triangulation.rs
request_generation/: Cargo.toml
request_generation/src/: building1.rs  building2.rs  building3.rs  lib.rs
simple_tools/c_speeds/: main.c
simple_tools/geo_cliper/: Cargo.toml
simple_tools/geo_cliper/src/: main.rs
simple_tools/plot_lines/: plot_lines.html
simple_tools/poly_intersection_js/: index.js  package-lock.json
test_app/: Cargo.toml
test_app/src/: main.rs
test_merge/: Cargo.toml
test_merge/src/: main.rs
test_merge_js/: index.js  package-lock.json  package.json  plot_lines.html
test_poly_intersection/: Cargo.toml
test_poly_intersection/src/: main.rs
web-api/: Cargo.toml
web-api/src/: main.rs
(+1 files in other folders)
