[package]
name = "general_geometry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
petgraph = "0.6.2"
nalgebra = "0.31.3"
geo-clipper = "0.7.3"
geo-types = "0.7.8"
