[package]
name = "generating_plan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tessellation = "0.8.2"
nalgebra = "0.22.*"
earcutr = "0.3.0"
cgmath="0.18.*"
