[package]
name = "test_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generating_plan = { path = "../generating_plan" }
request_generation = { path = "../request_generation" }
petgraph = "0.6.2"
geo-clipper = "0.7.3"
geo-types = "0.7.3"
