[package]
name = "test_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generating_plan = { path = "../generating_plan" }
request_generation = { path = "../request_generation" }
general_geometry = { path = "../general_geometry" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
